# TermProject

./: CMakeLists.txt  TermProject.sln  imgui.ini  main.cpp
TermProject/: Details.cpp  Details.hpp  GraphUtils.cpp  GraphUtils.h  Matrix.cpp  Matrix.h  PathFinder.cpp  PathFinder.h  Point.cpp  Point.h  RefinedVoronoiDiargram.cpp  RefinedVoronoiDiargram.h  ShapeBuilder.cpp  ShapeBuilder.h  Shapes.h  TermProject.vcxproj  TermProject.vcxproj.filters  VVComplex.cpp  VVComplex.h  VoronoiDiagram.cpp  VoronoiDiagram.h  WKTParser.cpp  WKTParser.h  Window.cpp  Window.h  main.cpp  resource.h  shapes.wkt
dependencies/: CMakeLists.txt
dependencies/cgal/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Algorithm/Graph/: Graph.cpp  Graph.h
src/Algorithm/HaloGenerator/: HaloGenerator.cpp  HaloGenerator.h
src/Algorithm/Math/: Math.hpp
src/Algorithm/PathFinder/: PathFinder.cpp  PathFinder.h
src/Algorithm/PlanarGraph/: PlanarGraph.cpp  PlanarGraph.h
src/Algorithm/Structures/: BoostCompat.h
src/Algorithm/VVC/: VVC.cpp  VVC.h
src/Algorithm/Voronoi/: Helpers.h  Voronoi.cpp  Voronoi.h
src/Application/: App.cpp  App.h  AppState.h
src/Utility/: Shapes.hpp
src/Utility/Color/: Color.cpp  Color.h
src/Utility/Loader/: PolygonLoader.h
src/Utility/Logger/: DefaultAppenders.h  ILogAppender.h  Logger.cpp  Logger.h
src/Window/: Keyboard.hpp  Window.cpp  Window.h
src/Window/GUI/: IGui.h  UserInterface.cpp  UserInterface.h
